2004-03-25  Gareth Owen  <gowen72@yahoo.com>

	* configure.in: Added en_GB to ALL_LINGUAS

2004-03-19  Evandro Fernandes Giovanini  <evandrofg@ig.com.br>

	* configure.in (ALL_LINGUAS): Added "pt_BR" (Brazilian Portuguese).

2004-03-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* replace.pl.in: (gst_replace_chat): added the possibility of not
	  using quotes in the file, I'm not sure if they are needed at all
	  in any distro's chatfile, so I won't remove that bit until I'm sure

2004-03-16  James Ogley <james@usr-local-bin.org>

	* service.pl.in, time-conf.in: added support for SuSE 9.0 for the
	  time tool

2004-03-16  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network-conf.in, network.pl.in: added slackware 9.1 ppp support
	* replace.pl.in, parse.pl.in, file.pl.in: related fixes

2004-02-18  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* configure.in: fixed compilation

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>
 
         * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-08  Takeshi AIHANA <aihana@gnome.gr.jp>

	* configure.in: Added 'ja' (Japanese) to ALL_LINGUAS.

2004-02-05  Christian Neumair  <chris@gnome-de.org>

	* configure.in: Added "de" (German) to ALL_LINGUAS.

2004-02-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.32.0

2004-02-01  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-grub.pl.in: added some notification when the file can't be
	  found

2004-02-01  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added "da" (Danish) to ALL_LINGUAS.

2004-01-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* boot-conf.in, boot.pl.in: added support for choosing the preferred
	  bootloader if there are several installed

2004-01-31  Žygimantas Beručka  <uid0@tuxfamily.org>

	* configure.in: Added "lt" to ALL_LINGUAS.

2004-01-23  Grzegorz Golawski <grzegol@pld-linux.org>

	* network-conf.in, network.pl.in, platform.pl.in, service.pl.in,